Completion of the first section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>web</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="main_style.css">
+    <script src="https://kit.fontawesome.com/ca0d22efad.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -25,21 +26,36 @@
             </nav>
         </div>
     </header>
-    <section class="main-board bb">
-        <div class="main_wraper bb">
-            <div class="main-board_left-block bb">
-                <h1>A Perfect Landing Page For Your App Showcasing</h1>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                    nisi ut aliquip ex ea commodo.</div>
-                <div class="bb">
-                    <a href="">button1</a>
-                    <a href="">button2</a>
+    <main>
+        <section class="main-board">
+            <div class="main_wraper">
+                <div class="main-board_left-block">
+                    <h1 class="">A Perfect Landing Page For Your App Showcasing</h1>
+                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi ut aliquip ex ea commodo.
+                    </div>
+                    <div>
+                        <a href="#" class="main-board_button-link">
+                            <i class="fab fa-android"></i>
+                            <div>
+                                <div>Get in</div>
+                                <div class="main-board_button-link_bold">Coogle Pay</div>
+                            </div>
+                        </a>
+                        <a href="#" class="main-board_button-link">
+                            <i class="fab fa-apple"></i>
+                            <div>
+                                <div>Download on the</div>
+                                <div class="main-board_button-link_bold">Apple Store</div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
+                <img src="src/mobile-mockup.png">
             </div>
-            <img src="src/mobile-mockup.png" class="bb">
-        </div>
-    </section>
+        </section>
+    </main>
 </body>
 
 </html>
