--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <img src="src/logo.png">
             <nav class="main-menu">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Services</a></li>
+                    <li><a href="#home-link">Home</a></li>
+                    <li><a href="#services-link">Services</a></li>
                     <li><a href="#">How it work</a></li>
                     <li><a href="#">Team</a></li>
                     <li><a href="#">Our blog</a></li>
@@ -27,7 +27,7 @@
         </div>
     </header>
     <main>
-        <section class="main-board">
+        <section class="main-board" id="home-link">
             <div class="main_wraper">
                 <div class="main-board_left-block">
                     <h1 class="">A Perfect Landing Page For Your App Showcasing</h1>
@@ -53,6 +53,37 @@
                     </div>
                 </div>
                 <img src="src/mobile-mockup.png">
+            </div>
+        </section>
+        <section class="services" id="services-link">
+            <div class="main_wraper">
+                <h2><span>Services</span></h2>
+                <div class="services_block-item">
+                    <div class="services_item">
+                        <div class="box-icon">
+                            <i class="fas fa-heart"></i>
+                        </div>
+                        <h3>Made With Love</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatipn.</p>
+                        <a href="#">Read more</a>
+                    </div>
+                    <div class="services_item">
+                        <div class="box-icon">
+                            <i class="fas fa-rocket"></i>
+                        </div>
+                        <h3>Clean Design</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatipn.</p>
+                        <a href="#">Read more</a>
+                    </div>
+                    <div class="services_item">
+                        <div class="box-icon">
+                            <i class="fas fa-layer-group"></i>
+                        </div>
+                        <h3>Easy To Customize</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatipn.</p>
+                        <a href="#">Read more</a>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
