--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                 <div class="main-board_left-block">
                     <h1 class="">A Perfect Landing Page For Your App Showcasing</h1>
                     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris
                         nisi ut aliquip ex ea commodo.
                     </div>
                     <div>
@@ -64,7 +65,8 @@
                             <i class="fas fa-heart"></i>
                         </div>
                         <h3>Made With Love</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatipn.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatipn.</p>
                         <a href="#">Read more</a>
                     </div>
                     <div class="services_item">
@@ -72,7 +74,8 @@
                             <i class="fas fa-rocket"></i>
                         </div>
                         <h3>Clean Design</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatipn.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatipn.</p>
                         <a href="#">Read more</a>
                     </div>
                     <div class="services_item">
@@ -80,9 +83,50 @@
                             <i class="fas fa-layer-group"></i>
                         </div>
                         <h3>Easy To Customize</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatipn.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatipn.</p>
                         <a href="#">Read more</a>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="works">
+            <div class="main_wraper">
+                <h2>
+                    <span>
+                        how it works
+                    </span>
+                </h2>
+                <div class="works_block-items">
+                    <div class="works_block-items_text">
+                        <h3>
+                            What you get in this landing page!
+                        </h3>
+                        <p>
+                            It is a long established fact that a reader will be distracted by the readable content of a
+                            page when looking at its layout. The point of using Lorem Ipsum is that it has a
+                            more-or-less normal distribution of letters.
+                        </p>
+                        <ul>
+                            <li>
+                                All the Lorem Ipsum generators on the Internet tendto repeat predefined chunks as
+                                necessary.
+                            </li>
+                            <li>
+                                All the Lorem Ipsum generators on the Internet.
+                            </li>
+                            <li>
+                                All the Lorem Ipsum generators on the Internet tendto repeat predefined.
+                            </li>
+                            <li>
+                                All the Lorem Ipsum generators on the Internet.
+                            </li>
+                            <li>
+                                All the Lorem Ipsum generators on the Internet tendto repeat predefined.
+                            </li>
+                        </ul>
+                    </div>
+                    <img src="src/work-mobile.png">
                 </div>
             </div>
         </section>
