Team section creation

--- a/index.html
+++ b/index.html
@@ -130,6 +130,97 @@
                 </div>
             </div>
         </section>
+        <section class="team">
+            <div class="main_wraper">
+                <h2>
+                    <span>
+                        team
+                    </span>
+                </h2>
+                <div class="team_items">
+                    <div class="team_items-person">
+                        <figure>
+                            <img src="src/member-1-255x260.jpg">
+                            <figcaption>
+                                <a href="">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                                <a href="">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                                <a href="">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </figcaption>
+                        </figure>
+                        <div class="team_items-person_info">
+                            <h3>James Doe</h3>
+                            <span>Android Developer</span>
+                        </div>
+                    </div>
+                    <div class="team_items-person">
+                        <figure>
+                            <img src="src/member-3-255x260.jpg">
+                            <figcaption>
+                                <a href="">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                                <a href="">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                                <a href="">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </figcaption>
+                        </figure>
+                        <div class="team_items-person_info">
+                            <h3>Davidson</h3>
+                            <span>Team Lead</span>
+                        </div>
+                    </div>
+                    <div class="team_items-person">
+                        <figure>
+                            <img src="src/member-4-255x260.jpg">
+                            <figcaption>
+                                <a href="">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                                <a href="">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                                <a href="">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </figcaption>
+                        </figure>
+                        <div class="team_items-person_info">
+                            <h3>Jack Wyane</h3>
+                            <span>IOS Developer</span>
+                        </div>
+                    </div>
+                    <div class="team_items-person">
+                        <figure>
+                            <img src="src/member-1-255x260.jpg">
+                            <figcaption>
+                                <a href="">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                                <a href="">
+                                    <i class="fab fa-facebook-f"></i>
+                                </a>
+                                <a href="">
+                                    <i class="fab fa-linkedin-in"></i>
+                                </a>
+                            </figcaption>
+                        </figure>
+                        <div class="team_items-person_info">
+                            <h3>James Doe</h3>
+                            <span>CEO</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
