--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 <ul>
                     <li><a href="#home-link">Home</a></li>
                     <li><a href="#services-link">Services</a></li>
-                    <li><a href="#">How it work</a></li>
-                    <li><a href="#">Team</a></li>
-                    <li><a href="#">Our blog</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#works-link">How it work</a></li>
+                    <li><a href="#team-link">Team</a></li>
+                    <li><a href="#blog-link">Our blog</a></li>
+                    <li><a href="#contact-link">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -90,7 +90,7 @@
                 </div>
             </div>
         </section>
-        <section class="works">
+        <section class="works" id="works-link">
             <div class="main_wraper">
                 <h2>
                     <span>
@@ -130,7 +130,7 @@
                 </div>
             </div>
         </section>
-        <section class="team">
+        <section class="team" id="team-link">
             <div class="main_wraper">
                 <h2>
                     <span>
@@ -221,7 +221,93 @@
                 </div>
             </div>
         </section>
+        <section class="blog" id="blog-link">
+            <div class="main_wraper">
+                <h2>
+                    <span>
+                        our blog
+                    </span>
+                </h2>
+                <div class="blog_container">
+                    <a href="" class="blog_container_item">
+                        <div class="blog_container_image image1"></div>
+                        <div class="blog_container_item-text">
+                            <span>september 20, 2019</span>
+                            <p>lorem ipsum dolor sit amet ipsum dolor</p>
+                        </div>
+                    </a>
+                    <a href="" class="blog_container_item">
+                        <div class="blog_container_image image2"></div>
+                        <div class="blog_container_item-text">
+                            <span>septembr 19, 2019</span>
+                            <p>lorem ipsum dolor sit amet ipsum dolor</p>
+                        </div>
+                    </a>
+                    <a href="" class="blog_container_item">
+                        <div class="blog_container_image image3"></div>
+                        <div class="blog_container_item-text">
+                            <span>septembr 19, 2019</span>
+                            <p>lorem ipsum dolor sit amet ipsum dolor</p>
+                        </div>
+                    </a>
+                    <a href="" class="blog_container_item">
+                        <div class="blog_container_image image4"></div>
+                        <div class="blog_container_item-text">
+                            <span>septembr 19, 2019</span>
+                            <p>lorem ipsum dolor sit amet ipsum dolor</p>
+                        </div>
+                    </a>
+                </div>
+                <a href="" class="all_posts">
+                    view all posts
+                </a>
+            </div>
+        </section>
+        <section class="contact" id="contact-link">
+            <div class="main_wraper">
+                <h2>
+                    <span>
+                        contact us
+                    </span>
+                </h2>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1248.4838607833528!2d27.593272592762347!3d53.91836588441758!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbcfa7bec46317%3A0x3efd8e8ffb993d!2z0JHQtdC70L7RgNGD0YHRgdC60LjQuSDQs9C-0YHRg9C00LDRgNGB0YLQstC10L3QvdGL0Lkg0YPQvdC40LLQtdGA0YHQuNGC0LXRgiDQuNC90YTQvtGA0LzQsNGC0LjQutC4INC4INGA0LDQtNC40L7RjdC70LXQutGC0YDQvtC90LjQutC4!5e0!3m2!1sru!2sby!4v1698326002470!5m2!1sru!2sby"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade" class="contact_map">
+                </iframe>
+            </div>
+        </section>
+        <section class="subscribe">
+            <div class="main_wraper">
+                <div class="subscribe_text">
+                    subscribe to our
+                    <span>
+                        newsletter
+                    </span>
+                </div>
+                <form action="post">
+                    <input type="text" name="subscribe_email" id="email" class="subscribe_input" placeholder="Enter your email">
+                    <button class="subscribe_button" type="submit">
+                        <i class="far fa-paper-plane"></i>
+                    </button>
+                </form>
+            </div>
+        </section>
     </main>
+    <footer class="footer">
+        <div class="main_wraper">
+            <img src="src/footer-logo.png">
+            <div class="footer_icons">
+                <a href="">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-google"></i></a>
+                <a href=""><i class="fab fa-linkedin"></i></a>
+            </div>
+            <p>Misma 2019 All Rights Reserved Papa</p>
+        </div>
+    </footer>
 </body>
 
 </html>
